Created String Variables

--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 
   <body>
     <p>
-      <strong>Named Function</strong><br />
+      <strong id="named-label"></strong><br />
       <span id="named-function"></span>
     </p>
     <p>
-      <strong>Anonymous Function</strong><br />
+      <strong id="anon-label"></strong><br />
       <span id="anon-function"></span>
     </p>
   </body>
