Experimented With Passing Variable Through Anonymous Function

--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
       <strong id="anon-label"></strong><br />
       <span id="anon-function"></span>
     </p>
+    <p>
+      <strong id="anon-passed-label"></strong><br />
+      <span id="anon-passed-function"></span>
+    </p>
   </body>
   <script src="script.js"></script>
 </html>
